Fix issues with Value